iRedMail-1.x.y:

* Updated packages:
    + mlmmjadmin -> 3.1.9

iRedMail-1.6.7:

* Updated packages:
    + netdata -> 1.43.1
    + roundcube -> 1.6.5. SECURITY UPDATE.

iRedMail-1.6.6:

- Fail2ban: Do not ban client which triggers `lost connection after UNKNOWN` error.

* Updated packages:
    + roundcube -> 1.6.4. Security update.
    + netdata -> 1.43.0

iRedMail-1.6.5:

    * Updated packages:
        + roundcube -> 1.6.3. Security update.
        + netdata -> 1.42.4
        + iredadmin -> 2.5

iRedMail-1.6.4:
    * Supports new distribution release:
        - Debian 12 (Bookworm). Note: Both Debian 11 and 12 are supported,
          but 12 is now recommended.

    * Install PHP 8.0 from official AppStream repo on CentOS / Rocky / AlmaLinux 8.
    * SOGo Groupware is now available on CentOS Stream 9, Rocky Linux 9,
      AlmaLinux 9. Thanks to SOGo team.
    * Fixed issues:
        - Not disable IDN support. Thanks to Anzulo for the fix (#221).
          <https://github.com/Anzulo1984>
        - Incorrect ssl ca file in Postfix.

    * Updated packages:
        + Roundcube -> 1.6.2
        + iRedAPD -> 5.3.3
        + netdata -> 1.41.0

iRedMail-1.6.3:
    * Supports new distribution release:
        - OpenBSD 7.3. Note: 7.1, 7.2 have been dropped.

    * SOGo Groupware is now available on Ubuntu 22.04. Thanks to SOGo team.
    * Disable TLSv1 and TLSv1.1 in Postfix. They're also disabled in Nginx
      and Dovecot.

    * Fixed issues:
        - [MariaDB] Missing index for SQL column `forwardings.forwarding`.
        - Missing Python module web.py on CentOS/Rocky/AlmaLinux.
        - FreeBSD ports tree is now up to date, main packages are updated:
            - MariaDB 10.6
            - PostgreSQL 15
            - OpenLDAP 2.6
            - PHP 8.1
            - Python 3.9
            - Perl 5.36

    * Updated packages:
        + Roundcube -> 1.6.1
        + iRedAPD -> 5.3
        + mlmmjadmin -> 3.1.7
        + iRedAdmin -> 2.3
        + netdata -> 1.39.1